--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="game.js"></script>
+    <p>Refresh page for new round</p>
 </body>
 </html>
