added some CSS and other JS code to improve UX

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
+<button onclick="game()">Press to Play</button>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1 {align-items: center; 
+            font-family: Verdana, sans-serif;
+            display: flex;}
+    </style>
 </head>
 <body>
     <script src="game.js"></script>
-    <p>Refresh page for new round</p>
+    <h1>Please press F12 to open the Console, and view your game progress there</h1>
+    <div id="main_div">Output: </div>
 </body>
 </html>
