improve the UX, UI, and JS. No longer use prompt for input

--- a/index.html
+++ b/index.html
@@ -1,21 +1,59 @@
-<!DOCTYPE html>
-<button onclick="game()">Press to Play</button>
-<html lang="en">
+<html>
+    <link rel="stylesheet" href="style.css"
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        h1 {align-items: center; 
-            font-family: Verdana, sans-serif;
-            display: flex;}
-    </style>
+    <title>Rock-Paper-Scissors</title>
 </head>
+
 <body>
-    <script src="game.js"></script>
-    <h1>Please press F12 to open the Console, and view your game progress there</h1>
-    <div id="main_div">Output: </div>
+    <h1>Rock-Paper-Scissors</h1>
+    <p>Choose your move:</p>
+    <button id="rock" onclick="playRound('rock')">Rock</button>
+    <button id="paper" onclick="playRound('paper')">Paper</button>
+    <button id="scissors" onclick="playRound('scissors')">Scissors</button>
+    <br><br>
+    <div id="results"></div>
+    <br>
+    <br>
+    <button onclick="window.location.reload()">Restart</button>
+    <script>
+        const options = ['rock', 'paper', 'scissors'];
+        let playerScore = 0;
+        let computerScore = 0;
+        let round = 0;
+
+        const resultsDiv = document.getElementById('results');
+
+        function playRound(playerChoice) {
+            round++;
+            if (round > 5) {
+                if (playerScore > computerScore) {
+                    resultsDiv.innerHTML += `<br> You win the game with a score of ${playerScore} to ${computerScore}!`;
+                } else if (computerScore > playerScore) {
+                    resultsDiv.innerHTML += `<br> Computer wins the game with a score of ${computerScore} to ${playerScore}!`;
+                } else {
+                    resultsDiv.innerHTML += `<br> The game is a tie with a score of ${playerScore} to ${computerScore}!`;
+                }
+                return;
+            }
+            const computerChoice = options[Math.floor(Math.random() * 3)];
+            let outcome;
+            if (playerChoice === computerChoice) {
+                outcome = "It's a tie!";
+            } else if (
+                (playerChoice === 'rock' && computerChoice === 'scissors') ||
+                (playerChoice === 'paper' && computerChoice === 'rock') ||
+                (playerChoice === 'scissors' && computerChoice === 'paper')
+            ) {
+                outcome = 'You win!';
+                playerScore++;
+            } else {
+                outcome = 'Computer wins!';
+                computerScore++;
+            }
+            resultsDiv.innerHTML += `Round ${round}: ${outcome} Player: ${playerChoice} Computer: ${computerChoice} <br>`;
+        }
+    </script>
 </body>
+
 </html>
